tests/negative/neg_pr113_float_discriminant.safe
package Neg_PR113_Float_Discriminant
   type Packet (Weight : Float = 1.0) is
      record
         Value : Integer;

